# bn_vmlinux_2_elf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  __init__.py  genElfHeader.py  getStructMemOff.py  kallsym.py  parseSymFile.py  plugin.json  pyelf.py
binpatch/: genElfHeader.py  getStructMemOff.py  kallsym.py  pyelf.py
ki_to_vmlinux/: CMakeLists.txt  ki_to_vmlinux.cpp  ki_to_vmlinux.h  main.cpp
ki_to_vmlinux/binja/: CMakeLists.txt
